# hndash

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  SERVICES.md  TODO-v2.md  TODO.md  config.toml  config.toml.example
ext/: background.js  manifest.json  options.css  options.html  options.js
src/: article.rs  config.rs  db.rs  fetcher.rs  main.rs  models.rs  search.rs  summarizer.rs
templates/: import.html  index.html
